--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "~13.2.0",
     "file-saver": "^2.0.5",
     "rxjs": "~7.5.0",
+    "socket.io-client": "^3.0.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
