--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "~13.2.0",
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
+    "@auth0/angular-jwt": "^5.0.2",
     "file-saver": "^2.0.5",
     "rxjs": "~7.5.0",
     "socket.io-client": "^3.0.0",
